Bug 129141 - UI: CALC: formula bar showing wrong formula
Summary: UI: CALC: formula bar showing wrong formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
: 126225 129155 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-02 07:17 UTC by b.
Modified: 2020-08-12 19:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
6_2_8_2_showing_wrong_formula (19.30 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-12-02 07:26 UTC, b.
Details
6_2_8_2_showing_wrong_formula_2 (19.50 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-12-02 07:39 UTC, b.
Details
6_2_8_2_showing_wrong_formula_3 (19.60 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-12-02 07:41 UTC, b.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description b. 2019-12-02 07:17:51 UTC
Description:
I have noticed a peculiarity, with longer similar sums in cells which are not even directly below each other LO calc sometimes shows wrong formulas in the formula line. 

See example file in next comment, if you step through the red cells from bottom to top you see in the formula line - you have to extend that to see the whole formula - the 'short' formula as it really is in the lower cell, if you step through from top to bottom you see the 'long' formula as it is in the upper cell. 

calc calculates correctly, and has stored the correct formulas in the cells - which you can check with F2 - but for a user it is quite irritating why a formula displayed the same (wrong, but the user doesn't know that) gives different results. 


Steps to Reproduce:
see above description and sample in next comment, step through the red cells with the cursor keys and watch the formula bar not! changing, step through with the mouse the formula bar will change (at least in ver. 4.1.6.2), when you 'step into' a cell (F2) the formula bar will be corrected (at least sometimes in ver. 6.2.8.2), but not in 6.5.0.0alpha0+, 



Actual Results:
formula bar showing wrong formulae, copied or kept from cells which where active before, 

Expected Results:
correct formula in the formula bar, 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 0c4736a3e6b6e641579f517cf134ce2fd89fe132
CPU threads: 8; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc:
Comment 1 b. 2019-12-02 07:26:51 UTC
Created attachment 156235 [details]
6_2_8_2_showing_wrong_formula

attachment for above bug, 

additional observation, if you place empty cells between the affected the bug disappears, if you hide the rows with the empty cells the bug appears again ... 

something wrong in the display unit looking for similarity?
Comment 2 b. 2019-12-02 07:39:59 UTC
Created attachment 156236 [details]
6_2_8_2_showing_wrong_formula_2

a little 'stripped' version of the file, in this i observe the problem on switching from B2 to B3 and vice-versa, but not between B3 and B4
Comment 3 b. 2019-12-02 07:41:53 UTC
Created attachment 156237 [details]
6_2_8_2_showing_wrong_formula_3

just a test, in this version the bugs steps in on cells horizontally besides each other, B2 to C2 buggy, C2 to D2 not ...
Comment 4 Mike Kaganski 2019-12-02 08:19:25 UTC
Repro withVersion: 6.5.0.0.alpha0+ (x64)
Build ID: b1410efe6d3e7ca217181b18b18407886ffca91e
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL

and LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735

(the release where the multi-line formula bar first appeared).

Only reproducible when the difference is on the following lines of the formula box: expanding Calc to full screen on a 1920x1080 display (so the whole formula fits the first line) makes it update correctly.

Also interesting that it refreshes itself e.g. when an "update available" notification balloon appears - open an outdated version of LO with the file in the windowed (not expanded) view; expand formula bar; reproduce the problem and let selection stay on a cell with wrong formula displayed; wait for "Update available" notification appears in the top right application corner; see the formula updated.
Comment 5 Mike Kaganski 2019-12-02 10:43:03 UTC
https://gerrit.libreoffice.org/84207
Comment 6 Commit Notification 2019-12-02 13:05:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/68a8467723f69f5ab61d2bee5e83984c5584af41

tdf#129141: paint all when in multiline mode

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2019-12-03 11:10:24 UTC
*** Bug 129155 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2019-12-16 12:42:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/892b077706515a71a84ec16350f4f542cc60015e

tdf#129141: paint all when in multiline mode

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Mike Kaganski 2020-08-12 19:21:02 UTC
*** Bug 126225 has been marked as a duplicate of this bug. ***