tdf#129141: paint all when in multiline mode

... otherwise it assumes that only part of first string to the right of the
unchanged string part needs redrawing (which would be to the right of the
control itself)

Change-Id: I2833c1eb2026041b11d0b72431b164d2ee3befef
Reviewed-on: https://gerrit.libreoffice.org/84207
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>